--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -2,5 +2,8 @@ x Google Analytics
    x Outgoing Links
 x Multiple ingestions overwrite
 x cron the rake tasks
-- bring in the YQL ingestors
+x bring in the YQL ingestors
 x add to github
+- add in microformat outputs
+- add in microformat ingestor
+- add in rss ingestor
